# stm32g0-rtic-quickstart

./: Cargo.toml  Embed.toml  LICENSE  README.md  cargo-generate.toml
.cargo/: config.toml
src/: main.rs
